# AI-Legal-Assistant

./: .gitignore  COPILOTKIT_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  READY_TO_RUN.md  SETUP.md  SETUP_NOW.md  TROUBLESHOOTING_GUIDE.md  architecture.md
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/agent/: graph.py  state.py
backend/app/agent/nodes/: classification.py  compliance.py  extraction.py  hitl.py  ingestion.py  report.py  risk_assessment.py
backend/app/api/routes/: agent.py
backend/app/services/: document_processor.py  llm_service.py
